Fix CSS visibility bug with course-starred mark appearing when schedule tab is hidden

--- a/src/App/Schedule/CourseBlock/CourseBlock.css
+++ b/src/App/Schedule/CourseBlock/CourseBlock.css
@@ -17,6 +17,6 @@
   visibility: hidden;
 }
 
-.course.block.starred .star {
+#schedule.active .course.block.starred .star {
   visibility: visible;
 }
